# ufc-prediction-fights

./: .gitignore  CLAUDE.md  IDEA.md  Procfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/events/: 00a905a4a4a2b071.json  010986ee359fb863.json  012fc7cd0779c09a.json  01dd4cdc2446f665.json  02177caefe7c07d4.json  026b4f7049085842.json  03b1e846b09f721d.json  03da33a102d9a45f.json  04076783ca83d6ae.json  079488710f012779.json  0941df56f6ac954b.json  0b5b6876c2a4723f.json  0b64d0fed453ef7f.json  0c01568b1ac77bff.json  0c1773639c795466.json  0c3838c8f7c620c2.json  0db9d2486d564a3c.json  0e2c2daf11b5d8f2.json  0eec866a077889f0.json  0f7210aa8d61af8d.json  1174782eacde9b0c.json  118463dd8db16e7f.json  119ebea97e914dcf.json  13a0fb8fbdafb54f.json  14b9e0f2679a2205.json  1507214bbc7a79e2.json  154a6b3ffae264cd.json  15515e797aedc137.json  15b1b21cd743d652.json  18c49685296c60e6.json  18f5669a92e99d92.json  1979c80150f630c4.json  1bf49bf829964144.json  1c7cce2f5c17160d.json  1ccff7f0cfdf85eb.json  1d00756835ca67c9.json  1e13936d708bcff7.json  1ef0eae31904e534.json  1f9344211ca7fd60.json  1fac46d466abd5b8.json  (+394 more)
data/fighters/: 001eb2ab0f30e7ea.json  002ca196477ce572.json  003d82fa384ca1d0.json  0052de90691d4a93.json  008ea710276c9606.json  009341ed974bad72.json  009c4420727149ea.json  00a3ff40c4b2cf21.json  00e11b5c8b7bfeeb.json  0112352cb32f5026.json  01641ba5df0c69b0.json  016a8d958883167c.json  01784fbc27c68b14.json  01afe0916a40c7c5.json  (+1683 more)
tests/: __init__.py  test_predictor.py  test_ratings.py  test_scraper.py  test_tracking.py
(+6929 files in other folders)
